# reach

./: .gitignore  Cargo.toml  Dockerfile  deny.toml
crates/reach-browserd/: Cargo.toml
crates/reach-browserd/src/: main.rs
crates/reach-cdp/: Cargo.toml  README.md
crates/reach-cdp/src/: commands.rs  lib.rs
crates/reach-cli/: Cargo.toml
crates/reach-cli/src/: config.rs  docker.rs  lib.rs  mcp.rs  scraper.rs
crates/reach-cli/src/commands/: connect.rs  create.rs  serve.rs  vnc.rs
crates/reach-cli/tests/: docker_types.rs  mcp_types.rs
crates/reach-scraper/: Cargo.toml  README.md
crates/reach-scraper/src/: adaptive.rs  agent.rs  cdp_fetcher.rs  hybrid_fetcher.rs  lib.rs  search.rs  static_fetcher.rs  stealth.rs
crates/reach-supervisor/src/: processes.rs
docs/superpowers/specs/: 2026-05-02-reach-scraper-mcp-design.md
