[package]
name = "reach-browserd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistent CDP supervisor for the reach sandbox"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

futures-util = "0.3"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
