[package]
name = "reach-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for managing reach sandbox containers"

[lib]
name = "reach_cli"
path = "src/lib.rs"

[[bin]]
name = "reach"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

clap = { version = "4", features = ["derive"] }
bollard = "0.18"
tower = "0.5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
open = "5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
futures = "0.3"
tokio-stream = "0.1"
colored = "3"
reqwest = { version = "0.13.3", features = ["json"] }
reach-cdp = { path = "../reach-cdp" }
reach-scraper = { path = "../reach-scraper" }
